staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
spec:
  rules:
    - host: staging.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: equipzilla-staging
                port:
                  number: 80
